--- a/tasks/setup-slave-replication.yml
+++ b/tasks/setup-slave-replication.yml
@@ -15,14 +15,6 @@
   tags:
     - percona-server-tools-setup-slave-replication-remove-backup-directory
 
-- name: setup slave replication | create (backup) directory
-  file:
-    path: "{{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}"
-    state: directory
-  when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
-  tags:
-    - percona-server-tools-setup-slave-replication-create-backup-directory
-
 - name: setup slave replication | make a backup
   shell: >
     ulimit -n {{ percona_server_tools_ulimit }} && \
@@ -54,19 +46,6 @@
   tags:
     - percona-server-tools-setup-slave-replication-prepare-the-backup
 
-- name: setup slave replication | pull backup
-  command: >
-    rsync \
-      -ai --delete \
-      -e 'ssh{% if percona_server_tools_setup_slave_replication.ssh_opts is defined %} {{ percona_server_tools_setup_slave_replication.ssh_opts | join(" ") }}{% endif %}' \
-      {{ percona_server_tools_setup_slave_replication.master.host }}:{{percona_server_tools_setup_slave_replication.innobackupex.backup_dir}}/ \
-      {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}
-  register: _pull_backup
-  changed_when: _pull_backup.stdout_lines | length > 0
-  when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
-  tags:
-    - percona-server-tools-setup-slave-replication-pull-backup
-
 - name: setup slave replication | get datadir
   mysql_variables:
     variable: datadir
@@ -82,14 +61,6 @@
   tags:
     - percona-server-tools-setup-slave-replication-set-datadir
 
-- name: setup slave replication | get master
-  command: cat {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}/xtrabackup_binlog_info
-  register: _master_log_information
-  changed_when: false
-  when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
-  tags:
-    - percona-server-tools-setup-slave-replication-get-master
-
 - name: setup slave replication | stop slave
   mysql_replication:
     mode: stopslave
@@ -98,7 +69,8 @@
     - percona-server-tools-setup-slave-replication-stop-slave
 
 - name: setup slave replication | reset slave
-  command: mysql -e 'RESET SLAVE ALL;'
+  command: >
+    mysql -e 'RESET SLAVE ALL;'
   changed_when: false
   when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
   tags:
@@ -120,24 +92,24 @@
   tags:
     - percona-server-tools-setup-slave-replication-purge-datadir
 
-- name: setup slave replication | copy back
+- name: setup slave replication | pull backup
   command: >
     rsync \
       -ai --delete \
-      --exclude 'backup-my.cnf' --exclude 'xtrabackup_*' \
-      {{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}/ \
+      -e 'ssh{% if percona_server_tools_setup_slave_replication.ssh_opts is defined %} {{ percona_server_tools_setup_slave_replication.ssh_opts | join(" ") }}{% endif %}' \
+      {{ percona_server_tools_setup_slave_replication.master.host }}:{{ percona_server_tools_setup_slave_replication.innobackupex.backup_dir }}/ \
       {{ percona_server_tools_datadir.rstrip('/') }}
   register: _pull_backup
   changed_when: _pull_backup.stdout_lines | length > 0
   when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
   tags:
-    - percona-server-tools-setup-slave-replication-copy-back
+    - percona-server-tools-setup-slave-replication-pull-backup
 
 - name: setup slave replication | set permissions
   file:
     path: "{{ percona_server_tools_datadir.rstrip('/') }}"
-    owner: mysql
-    group: mysql
+    owner: "{{ percona_server_tools_mysqld_user }}"
+    group: "{{ percona_server_tools_mysqld_user }}"
     recurse: true
   when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
   tags:
@@ -173,6 +145,15 @@
   when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-start-service
+
+- name: setup slave replication | get master
+  command: >
+    cat {{ percona_server_tools_datadir.rstrip('/') }}/xtrabackup_binlog_info
+  register: _master_log_information
+  changed_when: false
+  when: inventory_hostname in percona_server_tools_setup_slave_replication.inventory.slaves
+  tags:
+    - percona-server-tools-setup-slave-replication-get-master
 
 - name: setup slave replication | change master
   mysql_replication:
