--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,5 +5,6 @@ percona_server_tools_reset_root_password: {}
 percona_server_tools_reset_ib_logfile: {}
 
 percona_server_tools_setup_slave_replication: {}
+percona_server_tools_setup_slave_replication_gtid: {}
 
 percona_server_tools_setup_master_replication: {}
