--- a/tasks/setup-slave-replication-gtid.yml
+++ b/tasks/setup-slave-replication-gtid.yml
@@ -155,11 +155,11 @@
     - percona-server-tools-setup-slave-replication-gtid-get-master
 
 - name: setup slave replication | set gtid_purged
-    command: >
-      mysql \
-        -e "SET GLOBAL gtid_purged='{{ {{ _master_log_information.stdout.split()[2] } }}';" \
-        --skip-column-names
-    register: _set_gtid_purged
+  command: >
+    mysql \
+      -e "SET GLOBAL gtid_purged='{{ _master_log_information.stdout.split()[2] }}';" \
+      --skip-column-names
+  register: _set_gtid_purged
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-set-gtid-purged
