--- a/tasks/setup-slave-replication-gtid.yml
+++ b/tasks/setup-slave-replication-gtid.yml
@@ -1,13 +1,13 @@
 # tasks file for percona-server-tools
 ---
-- name: setup slave replication | check service
+- name: setup slave replication gtid | check service
   service:
     name: mysql
     state: started
   tags:
     - percona-server-tools-setup-slave-replication-gtid-check-service
 
-- name: setup slave replication | remove (backup) directory
+- name: setup slave replication gtid | remove (backup) directory
   file:
     path: "{{ percona_server_tools_setup_slave_replication_gtid.innobackupex.backup_dir }}"
     state: absent
@@ -15,7 +15,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-remove-backup-directory
 
-- name: setup slave replication | make a backup
+- name: setup slave replication gtid | make a backup
   shell: >
     ulimit -n {{ percona_server_tools_ulimit }} && \
     innobackupex \
@@ -31,7 +31,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-make-a-backup
 
-- name: setup slave replication | prepare the backup
+- name: setup slave replication gtid | prepare the backup
   shell: >
     ulimit -n {{ percona_server_tools_ulimit }} && \
     innobackupex \
@@ -46,7 +46,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-prepare-the-backup
 
-- name: setup slave replication | get datadir
+- name: setup slave replication gtid | get datadir
   mysql_variables:
     variable: datadir
   register: _datadir_value
@@ -54,28 +54,28 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-get-datadir
 
-- name: setup slave replication | set datadir
+- name: setup slave replication gtid | set datadir
   set_fact:
     percona_server_tools_datadir: "{{ _datadir_value.msg }}"
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-set-datadir
 
-- name: setup slave replication | stop slave
+- name: setup slave replication gtid | stop slave
   mysql_replication:
     mode: stopslave
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-stop-slave
 
-- name: setup slave replication | reset slave
+- name: setup slave replication gtid | reset slave
   mysql_replication:
     mode: resetslaveall
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-reset-slave
 
-- name: setup slave replication | stop service
+- name: setup slave replication gtid | stop service
   service:
     name: mysql
     state: stopped
@@ -83,7 +83,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-stop-service
 
-- name: setup slave replication | purge datadir
+- name: setup slave replication gtid | purge datadir
   file:
     path: "{{ percona_server_tools_datadir.rstrip('/') }}"
     state: absent
@@ -91,7 +91,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-purge-datadir
 
-- name: setup slave replication | pull backup
+- name: setup slave replication gtid | pull backup
   command: >
     rsync \
       -ai --delete \
@@ -104,7 +104,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-pull-backup
 
-- name: setup slave replication | set permissions
+- name: setup slave replication gtid | set permissions
   file:
     path: "{{ percona_server_tools_datadir.rstrip('/') }}"
     owner: "{{ percona_server_tools_mysqld_user }}"
@@ -114,7 +114,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-set-permissions
 
-- name: setup slave replication | stat debian.cnf
+- name: setup slave replication gtid | stat debian.cnf
   stat:
     path: "{{ percona_server_tools_debian_cnf_file }}"
   register: _stat_debian_cnf
@@ -122,7 +122,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-stat-debian.cnf
 
-- name: setup slave replication | pull debian.cnf
+- name: setup slave replication gtid | pull debian.cnf
   command: >
     rsync \
       -ai --checksum --delete \
@@ -137,7 +137,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-pull-debian.cnf
 
-- name: setup slave replication | start service
+- name: setup slave replication gtid | start service
   service:
     name: mysql
     state: started
@@ -145,7 +145,7 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-start-service
 
-- name: setup slave replication | get master
+- name: setup slave replication gtid | get master
   command: >
     cat {{ percona_server_tools_datadir.rstrip('/') }}/xtrabackup_binlog_info
   register: _master_log_information
@@ -154,17 +154,30 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-get-master
 
-- name: setup slave replication | set gtid_purged
+- name: setup slave replication gtid | reset master
+  command: >
+    mysql \
+      -e "RESET MASTER;" \
+      --skip-column-names
+  when:
+    - inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
+    - _master_log_information.stdout.split() | length > 2
+  tags:
+    - percona-server-tools-setup-slave-replication-gtid-reset-master
+
+- name: setup slave replication gtid | set gtid_purged
   command: >
     mysql \
       -e "SET GLOBAL gtid_purged='{{ _master_log_information.stdout.split()[2] }}';" \
       --skip-column-names
   register: _set_gtid_purged
-  when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
+  when:
+    - inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
+    - _master_log_information.stdout.split() | length > 2
   tags:
     - percona-server-tools-setup-slave-replication-gtid-set-gtid-purged
 
-- name: setup slave replication | change master
+- name: setup slave replication gtid | change master
   mysql_replication:
     mode: changemaster
     master_host: "{{ percona_server_tools_setup_slave_replication_gtid.master.host }}"
@@ -175,14 +188,14 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-change-master
 
-- name: setup slave replication | start slave
+- name: setup slave replication gtid | start slave
   mysql_replication:
     mode: startslave
   when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
   tags:
     - percona-server-tools-setup-slave-replication-gtid-start-slave
 
-- name: setup slave replication | get slave
+- name: setup slave replication gtid | get slave
   mysql_replication:
     mode: getslave
   register: _slave_information
