--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
-# meta file for percona-server-tools
+# meta file
 ---
 galaxy_info:
+  namespace: oefenweb
   role_name: percona-server-tools
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
