--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 ---
 galaxy_info:
   namespace: oefenweb
-  role_name: percona-server-tools
+  role_name: percona_server_tools
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Manage percona-server server (or any other flavour of MySQL) in Debian-like systems
