--- a/tasks/reset-root-password-ge-57.yml
+++ b/tasks/reset-root-password-ge-57.yml
@@ -39,12 +39,12 @@
 
 - name: reset root password | start service without grants and networking
   command: >
-    timeout --preserve-status {{ percona_server_tools_mysqld_start_timeout }}s mysqld \
-      --defaults-file={{ percona_server_tools_my_cnf_file_safe }} \
-      --init-file={{ percona_server_tools_my_init_file }} \
-      --skip-grant-tables \
-      --skip-networking \
-      --user="{{ percona_server_tools_mysqld_user }}"
+    timeout --preserve-status {{ percona_server_tools_mysqld_start_timeout }}s mysqld
+    --defaults-file={{ percona_server_tools_my_cnf_file_safe }}
+    --init-file={{ percona_server_tools_my_init_file }}
+    --skip-grant-tables
+    --skip-networking
+    --user="{{ percona_server_tools_mysqld_user }}"
   async: "{{ (percona_server_tools_mysqld_start_timeout | int) * 10 }}"
   poll: 0
   register: _mysqld_sleeper
