--- a/tasks/reset-root-password-lt-57.yml
+++ b/tasks/reset-root-password-lt-57.yml
@@ -9,11 +9,11 @@
 
 - name: reset root password | login as debian-sys-maint and reset root password
   command: >
-    mysql \
-      --defaults-file=/etc/mysql/debian.cnf \
-      --database=mysql \
-      -e "UPDATE `user` SET `Password` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}') WHERE `User` = 'root'; SELECT ROW_COUNT();" \
-      --skip-column-names
+    mysql
+    --defaults-file=/etc/mysql/debian.cnf
+    --database=mysql
+    -e "UPDATE `user` SET `Password` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}') WHERE `User` = 'root'; SELECT ROW_COUNT();"
+    --skip-column-names
   register: _rows_affected
   changed_when: "_rows_affected.stdout != '0'"
   tags:
