--- a/tasks/setup-slave-replication-gtid.yml
+++ b/tasks/setup-slave-replication-gtid.yml
@@ -145,6 +145,14 @@
   tags:
     - percona-server-tools-setup-slave-replication-gtid-start-service
 
+- name: setup slave replication gtid | set offline_mode to 1 (online)
+  mysql_variables:
+    variable: offline_mode
+    value: '0'
+  when: inventory_hostname in percona_server_tools_setup_slave_replication_gtid.inventory.slaves
+  tags:
+    - percona-server-tools-setup-slave-replication-gtid-set-offline_mode
+
 - name: setup slave replication gtid | get master
   command: >
     cat {{ percona_server_tools_datadir.rstrip('/') }}/xtrabackup_binlog_info
