Make use of fully-qualified collection name

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 # tasks file
 ---
 - name: get mysql version
-  shell: >
+  ansible.builtin.shell: >
     mysqld --version | sed -ne 's/[^0-9]*\(\([0-9]\.\)\{0,4\}[0-9][^.]\).*/\1/p'
   register: _mysql_version
   changed_when: false
@@ -11,7 +11,8 @@
     - percona-server-tools
     - percona-server-tools-get-mysql-version
 
-- include: reset-root-password-lt-57.yml
+- name: reset root password < 5.7
+  ansible.builtin.import_tasks: reset-root-password-lt-57.yml
   when:
     - percona_server_tools_reset_root_password.run | default(false)
     - _mysql_version.stdout is version('5.7', '<')
@@ -22,7 +23,8 @@
     - percona-server-tools-reset-root-password
     - percona-server-tools-reset-root-password-lt-57
 
-- include: reset-root-password-ge-57.yml
+- name: reset root password >= 5.7
+  ansible.builtin.import_tasks: reset-root-password-ge-57.yml
   when:
     - percona_server_tools_reset_root_password.run | default(false)
     - _mysql_version.stdout is version('5.7', '>=')
@@ -33,7 +35,8 @@
     - percona-server-tools-reset-root-password
     - percona-server-tools-reset-root-password-ge-57
 
-- include: reset-ib-logfile.yml
+- name: reset ib_logfile
+  ansible.builtin.import_tasks: reset-ib-logfile.yml
   when: percona_server_tools_reset_ib_logfile.run | default(false)
   tags:
     - configuration
@@ -41,7 +44,8 @@
     - percona-server-tools
     - percona-server-tools-reset-ib-logfile
 
-- include: setup-slave-replication.yml
+- name: setup slave replication
+  ansible.builtin.import_tasks: setup-slave-replication.yml
   when: percona_server_tools_setup_slave_replication.run | default(false)
   tags:
     - configuration
@@ -49,7 +53,8 @@
     - percona-server-tools
     - percona-server-tools-setup-slave-replication
 
-- include: setup-slave-replication-gtid.yml
+- name: setup slave replication gtid
+  ansible.builtin.import_tasks: setup-slave-replication-gtid.yml
   when: percona_server_tools_setup_slave_replication_gtid.run | default(false)
   tags:
     - configuration
@@ -57,7 +62,8 @@
     - percona-server-tools
     - percona-server-tools-setup-slave-replication-gtid
 
-- include: setup-master-replication.yml
+- name: setup master replication
+  ansible.builtin.import_tasks: setup-master-replication.yml
   when: percona_server_tools_setup_master_replication.run | default(false)
   tags:
     - configuration
