--- a/tasks/reset-root-password-ge-57.yml
+++ b/tasks/reset-root-password-ge-57.yml
@@ -1,14 +1,14 @@
 # tasks file
 ---
 - name: reset root password | stop service
-  service:
+  ansible.builtin.service:
     name: mysql
     state: stopped
   tags:
     - percona-server-tools-reset-root-password-ge-57-stop-service
 
 - name: reset root password | create init-file
-  copy:
+  ansible.builtin.copy:
     dest: "{{ percona_server_tools_my_init_file }}"
     content: |
       UPDATE `mysql`.`user` SET `authentication_string` = PASSWORD('{{ percona_server_tools_reset_root_password.root_password }}'), plugin = 'mysql_native_password' WHERE `User` = 'root';
@@ -21,7 +21,7 @@
     - percona-server-tools-reset-root-password-ge-57-init-file-create
 
 - name: reset root password | copy my.cnf
-  command: >
+  ansible.builtin.command: >
     cp -av {{ percona_server_tools_my_cnf_file }} {{ percona_server_tools_my_cnf_file_safe }}
   register: _my_cnf_copy
   changed_when: _my_cnf_copy.stdout_lines | length > 0
@@ -29,7 +29,7 @@
     - percona-server-tools-reset-root-password-ge-57-my-cnf-copy
 
 - name: reset root password | make my.cnf safe
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ percona_server_tools_my_cnf_file_safe }}"
     state: absent
     regexp: "{{ item }}"
@@ -38,7 +38,7 @@
     - percona-server-tools-reset-root-password-ge-57-my-cnf-safe
 
 - name: reset root password | start service without grants and networking
-  command: >
+  ansible.builtin.command: >
     timeout --preserve-status {{ percona_server_tools_mysqld_start_timeout }}s mysqld
     --defaults-file={{ percona_server_tools_my_cnf_file_safe }}
     --init-file={{ percona_server_tools_my_init_file }}
@@ -53,7 +53,7 @@
     - percona-server-tools-reset-root-password-ge-57-start-service
 
 - name: reset root password | wait for service to finish
-  async_status:
+  ansible.builtin.async_status:
     jid: "{{ _mysqld_sleeper.ansible_job_id }}"
   register: _mysqld_sleeper_result
   until: _mysqld_sleeper_result.finished
@@ -63,7 +63,7 @@
     - percona-server-tools-reset-root-password-ge-57-end-service
 
 - name: reset root password | cleanup tmp files
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: absent
   with_items:
@@ -73,7 +73,7 @@
     - percona-server-tools-reset-root-password-ge-57-cleanup
 
 - name: reset root password | start service
-  service:
+  ansible.builtin.service:
     name: mysql
     state: started
   tags:
