--- a/tasks/reset-root-password-lt-57.yml
+++ b/tasks/reset-root-password-lt-57.yml
@@ -1,14 +1,14 @@
 # tasks file
 ---
 - name: reset root password | flush privileges
-  command: >
+  ansible.builtin.command: >
     mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e "FLUSH PRIVILEGES;"
   changed_when: false
   tags:
     - percona-server-tools-reset-root-password-lt-57-flush-privileges
 
 - name: reset root password | login as debian-sys-maint and reset root password
-  command: >
+  ansible.builtin.command: >
     mysql
     --defaults-file=/etc/mysql/debian.cnf
     --database=mysql
@@ -20,7 +20,7 @@
     - percona-server-tools-reset-root-password-lt-57-update-password
 
 - name: reset root password | flush privileges
-  command: >
+  ansible.builtin.command: >
     mysql --defaults-file=/etc/mysql/debian.cnf --database=mysql -e "FLUSH PRIVILEGES;"
   changed_when: false
   tags:
